# McScrapper

./: .replit  DEPLOYMENT_GUIDE.md  RAILWAY_FIX_GUIDE.md  app.py  license_service.py  pyproject.toml  railway.json  replit.md  requirements.txt  startup.py
McScrapper/: app.py  requirements.txt  scraper.py
McScrapper/templates/: index.html  login.html
attached_assets/: Pasted-HasnainAbbasSial-McScrapper-Disconnect-Add-Root-Directory-used-for-build-and-deploy-steps--1754492065926_1754492065927.txt
instance/: users.db
static/: script.js  style.css
