[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "openpyxl>=3.1.5",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "oauthlib>=3.3.1",
    "google-auth-httplib2>=0.2.0",
    "gspread>=6.2.1",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "flask-sqlalchemy>=3.1.1",
]
